--- a/.github/workflows/test-cron.yml
+++ b/.github/workflows/test-cron.yml
@@ -1,10 +1,12 @@
 name: Add Label
 
 on:
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch
+  workflow_dispatch:
+  inputs:
+      name:
+        description: 'Person to greet'
+        required: true
+        default: 'Mona the Octocat'
 
 jobs:
   add_label:
