--- a/.github/workflows/test-cron1.yml
+++ b/.github/workflows/test-cron1.yml
@@ -15,5 +15,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-ecosystem/action-add-labels@v1
         with:
+          github_token: ${{secrets.GH_TOKEN}}
           number: 2
           labels: test-4
