--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,5 +15,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-ecosystem/action-add-labels@v1
         with:
+          number: 2
           github_token: ${{ secrets.GITHUB_TOKEN }}
           labels: test-4
